# cpp-time-adapter

./: .appveyor.yml  .gitattributes  .travis.yml  BUILD.md  CMakeLists.txt  README.md  RELEASENOTES.md  conanfile.py  deploy.sh
.github/workflows/: archive-docs.yml
ci/pipelines/: Build.jenkinsfile  Release.jenkinsfile
ci/scripts/: deploy.sh
src/TimeAdapter/: CMakeLists.txt  ITimeAdapter.h  TimeAdapter.cpp  TimeAdapter.h
test/TimeAdapterTest/: CMakeLists.txt  stdafx.h
test/TimeAdapterTest/Tests/: CurrentTimeTest.cpp
test/TimeAdapterTestUtilities/: CMakeLists.txt  conanfile.py
test/TimeAdapterTestUtilities/Mocks/: MockTimeAdapter.cpp  MockTimeAdapter.h
test/TimeAdapterTestUtilities/Stubs/: StubTimeAdapter.cpp  StubTimeAdapter.h
test/TimeAdapterTestUtilities/test_package/: CMakeLists.txt  TimeAdapterTestUtilitiesExample.cpp  conanfile.py
test_package/: CMakeLists.txt  TimeAdapterExample.cpp  conanfile.py
